--- a/JavaScript/MyOmikuji/css/styles.css
+++ b/JavaScript/MyOmikuji/css/styles.css
@@ -3,18 +3,20 @@ body {
 }
 
 #btn {
-	width: 200px;
-	height: 200px;
-	background: #ef454a;
-	border-radius: 50%;
+  width: 410px;
+	height: 600px;
+	/* background: #ef454a; */
+	background-image:url('../../images/omikuji/syougatsu2_omijikuji2.png');
+	background-repeat:  no-repeat;
+	/* border-radius: 50%; */
 	margin: 30px auto;
 	text-align: center;
-	line-height: 200px;
+	line-height: 600px;
 	color: #fff;
 	font-weight: bold;
 	font-size: 42px;
 	cursor: pointer;
-	box-shadow: 0 10px 0 #d1483e;
+	/* box-shadow: 0 10px 0 #d1483e; */
 	user-select: none;
 }
 
@@ -25,6 +27,6 @@ body {
 
 /* ボタンが押された時のスタイル */
 #btn:active{
-	box-shadow: 0 5px 0 #d1483e;
+	/* box-shadow: 0 5px 0 #d1483e; */
 	margin-top: 35px;
 }
